...
            "state" : "translated",
            "value" : "Eliminare %@ @ %@ e tutti i file salvati?"
          }
        }
      }
    },
    "Demo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Demo"
          }
...
    "Dokument scannen" : {

    },
    "Dokument suchen" : {

    },
    "Dokumente" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Documents"
          }
...
    "Eigene Felder" : {

    },
    "Eigene Kopfzeilen" : {

    },
    "Einstellungen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "state" : "translated",
            "value" : "Face ID"
          }
        }
      }
    },
    "Farbthema" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Color theme"
          }
...
            "state" : "translated",
            "value" : "Account"
          }
        }
      }
    },
    "Konto hinzufügen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add account"
          }
...
            "state" : "translated",
            "value" : "Vuoto"
          }
        }
      }
    },
    "Lesemodus für den Text-Reiter" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reading mode for the text tab"
          }
...
            "state" : "translated",
            "value" : "Non ancora inviato al server"
          }
        }
      }
    },
    "Notizen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notes"
          }
...
    "Schon im Archiv" : {

    },
    "Schon im Archiv?" : {

    },
    "Schriftgröße" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Font size"
          }
...
            "state" : "translated",
            "value" : "Dimensione del testo"
          }
        }
      }
    },
    "Schwarzer Hintergrund" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Black background"
          }
...
            "state" : "translated",
            "value" : "Gestisci mittenti"
          }
        }
      }
    },
    "Server" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Server"
          }
...
            "state" : "translated",
            "value" : "Data di inizio"
          }
        }
      }
    },
    "Starten" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
        }
      }
    },
    "Unverändert lassen" : {

    },
    "Unverschlüsselt verbinden (http)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Connect unencrypted (http)"
          }
...
    "Vorbelegt aus den Vorschlägen des Servers." : {

    },
    "Vorbelegt durch Regel %@" : {

    },
    "Vorschau" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Preview"
          }
...
